Avoid content overflow in large screens

--- a/_static/css/pj_touch.css
+++ b/_static/css/pj_touch.css
@@ -803,7 +803,7 @@ SIDEBAR APPEARANCE
 }
 
 
-@media screen and (min-width: 1500px) {
+@media screen and (min-width: 1680px) {
     header {
         padding-inline: var(--desktop-big-padding);
     }
@@ -817,7 +817,7 @@ SIDEBAR APPEARANCE
 
 @media screen and (min-width: 870px) {
     .content {
-        max-width: unset;
+        max-width: 72%;
         width: -webkit-fill-available;
         overflow: auto;
     }
